2015-11-06  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/files/utils.py(decompress):

	- Add lzma support if available.

2015-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/__init__.py (test):

	Fix bug that broke function if invoked in other directories than typhon/.
	The needed path is now determined using the __file__ variable.

2015-11-03  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/tests/reference:

	Added directory which includes several test XML files.

	* typhon/arts/tests/test_matpack_types.py:

	Added module which provides basic test functions for reading XML files.

	* typhon/__init__.py: Added test() to run all tests.

2015-11-02  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Remove Python 2.7 from language list.

	* typhon/arts/xml.py:

	Add _ to ARTSTypesLoadMultiplexer and ARTSElement because they're only
	used internally.

	Make all methods in _ARTSTypesLoadMultiplexer static. Removes the need
	of unnecessarily instantiating an object.

	* DESCRIPTION.rst: Updated.

	* .gitignore: Updated.

2015-10-29  Oliver Lemke  <olemke@core-dump.info>

	* typhon/legacy/arts_types.py:

	Add support for both SingleScatteringData versions.

2015-10-22  Oliver Lemke  <olemke@core-dump.info>

	* doc/arts.rst, doc/modules.rst, typhon/__init__.py,
	typhon/arts/__init__.py, typhon/arts/xml.py:

	Started new xml implementation. Loosely based on the implementation in
	pyatmlab. Thanks Gerrit.
	
2015-10-22  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py, typhon/files/__init__.py, doc/files.rst,
	doc/modules.rst:

	Add 'files' module.

	* typhon/files/utils.py:

	Add convenience function 'decompress' for temporary unpacking of
	compressed files.

	* doc/developer.rst: Add section about default module short names.

	* doc/conf.py:

	Fix module sorting by using 'typhon.' as a common prefix.

	* .gitignore: Ignore file for git-svn users.

2015-10-20  Oliver Lemke  <olemke@core-dump.info>

	* doc/index.rst: Fix headings/title.
